--- a/src/main/css/config.css
+++ b/src/main/css/config.css
@@ -11,8 +11,6 @@
   --font-logo: "KaushanScript";
 
   --color-black-almost: #444444;
-  --color-bootstrap-green: #5cb85c;
-  --color-bootstrap-green-dark: #449d44;
 }
 
 /* html element has .dark class to enforce dark theme */
